--- a/it/index.html
+++ b/it/index.html
@@ -67,81 +67,85 @@
   <section class="accueil">
     <div class="slider" id="slider1">
     <div class="slides">
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Il parco della Pace</p>
-          <img src="../library/progetti/parco-della-pace/pdp-7.JPG" alt="Parco della Pace - Vicenza"></a>
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Castellaneta Marina</p>
-          <img src="../library/home/pan-home-castellaneta-marina.jpg" alt="Castellaneta Marina"></a>
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Expo 2015 - Milano</p>
-          <img src="../library/home/pan-home-expo-milano-2.jpg" alt="Expo 2015 - Milano"></a>
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Parco Nazionale Gran Paradiso</p>
-          <img src="../library/home/pan-home-gran-paradiso.jpg" alt="Parco Nazionale Gran Paradiso"></a>
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Grand Hotel di San Pellegrino Terme</p>
-          <img src="../library/home/pan-home-pellegrino.jpg" alt="Grand Hotel di San Pellegrino Terme"></a>
-        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Expo 2015 - Milano</p>
-          <img src="../library/home/pan-home-expo-milano-3.jpg" alt="Expo 2015 - Milano"></a>
+        <a class="thumb slide" href="progetti/parco-della-pace"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/parco-della-pace/18.jpg" alt="Parco della Pace - Vicenza"></a>
+
+        <a class="thumb slide" href="progetti/castellaneta-marina"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/castellaneta-marina/1.jpg" alt="Castellaneta Marina"></a>
+
+        <a class="thumb slide" href="progetti/expo-anello"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/expo-anello/18.jpg" alt="Expo 2015 - Milano"></a>
+
+        <a class="thumb slide" href="progetti/museo-della-lontra"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/museo-della-lontra/1.jpg" alt="Parco Nazionale Gran Paradiso"></a>
+
+        <a class="thumb slide" href="progetti/san-pellegrino"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/san-pellegrino/1.jpg" alt="Grand Hotel di San Pellegrino Terme"></a>
+
+        <a class="thumb slide" href="progetti/expo-piastra"><p class="cache" style="height: 100%; font-size: 100px;">+</p>
+          <img src="../library/progetti/expo-piastra/18.jpg" alt="Expo 2015 - Milano"></a>
     </div>
     <div class="scroll">&darr;</div>
     </div>
   </section>
 <!--1-->
+  <section class="centered">
+    <h4>Progettazione Architettura<br>+ Natura</h4>
+    <p>Siamo una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
+    <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
+    <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
+  </section>
+<!--#2-->
   <section class="split" id="responsive-reverse">
+    <div class="left" style="margin-top: 65px;">
+      <div> 
+        <h2>Paesaggio</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor</p>
+      </div>
+    </div>
     <div>
-      <img src="../library/home/pan-home-chisiamo.jpg" style="height: 75vh;" alt="Expo 2015 - Milano">
+      <img src="../library/progetti/parco-della-pace/17.jpg" style="height: 50vh;" alt="Parco della Pace">
+    </div>
+  </section>
+<!--#3-->
+  <section  class="split" id="responsive-reverse">
+    <div>
+      <img src="../library/progetti/parco-della-pace/9.jpg" style="height: 50vh;" alt="Parco della Pace">
     </div>
     <div class="right">
-      <div>
-        <h2>PAN associati</h2>
-        <p>Siamo una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
-        <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
-        <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
-        <div class="box"><a class="classic-link" href="404"><span>+</span>Scopri di più</a></div>
+      <div> 
+        <h2>Architettura</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor</p>
       </div>
     </div>
   </section>
-<!--#2-->
-  <section class="centered">
-      <h2>Aree di competenza</h2>
-      <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
-
-        <a class="news-link" href="404">
-          <h3>Consulenza ambientale e paesaggistica</h3></a>
-        <a class="news-link" href="404">
-          <h3>Studi di fattibilità</h3></a>
-        <a class="news-link" href="404">
-          <h3>Analisi agronomiche</h3></a>
-        <a class="news-link" href="404">
-          <h3>Botaniche e forestali</h3></a>
-        <a class="news-link" href="404">
-          <h3>Analisi e studi urbanistici</h3></a>
-        <a class="news-link" href="404">
-          <h3>Progettazione e direzione lavori</h3></a>
-        <a class="news-link" href="404">
-          <h3>Verifiche e studi ambientali</h3></a>
-  </section>
-<!--#3-->
+<!--#4-->
   <section class="split">
     <div class="left">
       <div>
-        <h2>Lavora con noi</h2>
-        <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
-        <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
-        <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
-        <div class="box"><a class="classic-link" href="404"><span>+</span>Scopri di più</a></div>
+        <h2>Consulenza ambientale</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor.</p>
       </div>
     </div>
     <div>
-      <img src="../library/home/pan-home-lavoraconnoi.jpg" style="height: 75vh;" alt="Expo 2015 - Milano">
+      <img src="../library/progetti/depuratore-trento/5.jpg" style="height: 50vh;" alt="Depuratore Trento">
     </div>
   </section>
-<!--4-->
-  <section class="centered">
+<!--5-->
+  <section>
     <h2>News</h2>
-        <a class="news-link" href="404">
-          <h3>Pubblicazione : Top Scape Paysage n° 53</h3></a>
-        <a class="news-link" href="404">
-          <h3>Pubblicazione : Rivista Industria delle costruzioni n°493</h3></a>
-        <a class="news-link" href="404">
-          <h3>Pubblicazione :Top Scape Paysage n° 46</h3></a>
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Top Scape Paysage n° 53</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Rivista Industria delle costruzioni n°493</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Top Scape Paysage n° 46</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
   </section>
 </main>
 
