--- a/it/news.html
+++ b/it/news.html
@@ -67,23 +67,26 @@
 
 <!--#1-->
   <section class="menu">
-    <button class="show-all-btn showSectionButton">Tutte le news</button>
-    <button class="filter-btn showSectionButton" data-filter="section1">Eventi</button>
-    <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
-    <button class="filter-btn showSectionButton" data-filter="section3">Premi</button>
+    <button class="filter-btn showSectionButton" data-filter="section1">Pubblicazioni</button>
+    <button class="filter-btn showSectionButton" data-filter="section2">Eventi</button>
+    <button class="filter-btn showSectionButton" data-filter="section3">Articoli</button>
+    <button class="filter-btn showSectionButton" data-filter="section4">Premi</button>
   </section>
 <!--#2-->
-  <section class="mono long news-section section2"><a class="thumb" href="#">
-    <h3>Top Scape Paysage n° 53</h3><h1>Pubblicazione</h1>
-  </a></section>
-<!--#3-->
-  <section class="mono long news-section section2"><a class="thumb" href="#">
-    <h3>Rivista Industria delle costruzioni n°493</h3><h1>Pubblicazione</h1>
-  </a></section>
-<!--#4-->
-  <section class="mono long news-section section2"><a class="thumb" href="#">
-    <h3>Top Scape Paysage n° 46</h3><h1>Pubblicazione</h1>
-  </a></section>
+  <section class="news-section section1">
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Top Scape Paysage n° 53</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Rivista Industria delle costruzioni n°493</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+    <a class="news-link" href="404">
+      <p>04/2024</p>
+      <p>Top Scape Paysage n° 46</p>
+      <p style="text-align: right; padding-right: 30px;">Pubblicazione</p></a>
+  </section>
 </main>
 
 <footer>
