--- a/it/studio.html
+++ b/it/studio.html
@@ -51,7 +51,7 @@
   <a href="progetti">Progetti</a>
   <a href="news">News</a>
   <a href="contatti">Contatti</a>
-  <div class="lang-switch" id="LS2">
+  <!--<div class="lang-switch" id="LS2">
     <a href="../en/studio">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
@@ -59,7 +59,7 @@
     <input type="checkbox" id="darkModeToggle2" class="darkModeToggle">
     <label for="darkModeToggle2" class="darkModeLabel">
     </label>
-  </div>
+  </div>-->
 </div>
 
 <main>
@@ -109,7 +109,7 @@
         <a href="https://barrecaelavarra.com/"><img class="svg-img partner" src="../library/studio/partners/14.svg"></a>
       </div>
   </section>
-<!--#3-->
+<!--
   <section class="mono news-section section2">
       <h2>Team</h2>
       <div class="container">
@@ -165,6 +165,7 @@
         </div>
       </div>
   </section>
+
   <section class="mono news-section section2">
       <h2>Hanno lavorato con noi</h2>
       <div id="list">
@@ -214,11 +215,12 @@
         <p class="note">Alessio Carlini</p>
       </div>
   </section>
-<!--#4-->
+-->
   <section class="mono news-section section3">
       <h2>Lavora con noi</h2>
       <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
   </section>
+<!--  
   <section class="mono news-section section3">
       <h2>Posizione aperte</h2>
       <p>Benvenuti nella sezione delle opportunità nella nostra azienda, dove il talento si unisce alla passione per creare un futuro straordinario insieme. Esplora le posizioni aperte e preparati a dare il via alla tua prossima avventura professionale con noi. Siamo pronti ad accogliere individui motivati e ambiziosi che desiderano fare la differenza nel loro lavoro e nella vita di chi ci circonda.</p>
@@ -246,8 +248,8 @@
         </ul>
       </div>
   </section>
+-->
   <section class="mono news-section section3">
-      <h1>Scrivici!</h1>
       <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?><!--" method="post">-->
         <p>Nome:</p>
         <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
@@ -257,7 +259,6 @@
         <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
         <label class="file-label" for="document">Carica un curriculum</label>
         <input type="file" id="document" name="document" accept=".pdf,.doc,.docx" required>
-        &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
         <input class="send" type="submit" value="Invia candidatura">
       </form>
   </section>
