--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -77,163 +77,163 @@
 <!--#9-->
   <section class="thumbnail news-section section3"><a class="thumb" href="salinella">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/salinella/1.jpg">
     <p class="sub">Parco del mediterraneo alla Salinella</p><p class="quote">2023</p>
   </a></section>
 <!--#11-->
   <section class="thumbnail news-section section1"><a class="thumb" href="cortevecchia">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/cortevecchia/1.jpg">
     <p class="sub">Concorso per Piazza Cortevecchia, La natura nel cuore della città</p><p class="quote">2022</p>
   </a></section>
 <!--#15-->
   <section class="thumbnail news-section section1"><a class="thumb" href="giardini-messina">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/giardini-messina/1.jpg">
     <p class="sub">Giardini urbani di Messina - Risanamento degli insediamenti baraccati nella città</p><p class="quote">2022</p>
   </a></section>
 <!--#3-->
   <section class="thumbnail news-section section2"><a class="thumb" href="borgo-san-lorenzo">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/borgo-san-lorenzo/1.jpg">
     <p class="sub">Parco storico di Villa Pecori Giraldi</p><p class="quote">2022</p>
   </a></section>
 <!--#2-->
   <section class="thumbnail news-section section1"><a class="thumb" href="borgaro-torinese">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/borgaro-torinese/1.jpg">
     <p class="sub">Piazza V. Veneto di Borgaro Torinese</p><p class="quote">2022</p>
   </a></section>
 <!--#23-->
   <section class="thumbnail news-section section1"><a class="thumb" href="piazzale-loreto">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/piazzale-loreto/1.jpg">
     <p class="sub">Progetto di riqualificazione del Piazzale Loreto</p><p class="quote">2021</p>
   </a></section>
 <!--#8-->
   <section class="thumbnail news-section section3"><a class="thumb" href="martina-franca">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/martina-franca/1.jpg">
     <p class="sub">Parco Ortolini</p><p class="quote">2021</p>
   </a></section>
 <!--#10-->
   <section class="thumbnail news-section section2"><a class="thumb" href="castellammare">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/castellammare/1.jpg">
     <p class="sub">Viale d'acesso ippocastani e giardino della Regia Quisisana</p><p class="quote">2021</p>
   </a></section>
 <!--#18-->
   <section class="thumbnail news-section section1"><a class="thumb" href="lido-di-milano">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/lido-di-milano/1.jpg">
     <p class="sub">Riqualificazione aree verdi del Lido di Milano</p><p class="quote">2021</p>
   </a></section>
 <!--#7-->
   <section class="thumbnail news-section section3"><a class="thumb" href="castellaneta-marina">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/castellaneta-marina/1.jpg">
     <p class="sub">Riqualificazione dei paesaggi di Castellaneta Marina</p><p class="quote">2020</p>
   </a></section>
 <!--#24-->
   <section class="thumbnail news-section section1"><a class="thumb" href="prolungamento-m5">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/prolungamento-m5/1.jpg">
     <p class="sub">Progettazione paesaggistica del prolungamento M5 da Milano a Monza</p><p class="quote">2020</p>
   </a></section>
 <!--#25-->
   <section class="thumbnail news-section section2"><a class="thumb" href="san-pellegrino">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/san-pellegrino/1.jpg">
     <p class="sub">Giardino del Grand Hotel di San Pellegrino</p><p class="quote">2019</p>
   </a></section>
 <!--#4-->
   <section class="thumbnail news-section section2"><a class="thumb" href="capo-di-ponte">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/capo-di-ponte/1.jpg">
     <p class="sub">Parco tematico sulle energie rinnovabili</p><p class="quote">2019</p>
   </a></section>
 <!--#16-->
   <section class="thumbnail news-section section2"><a class="thumb" href="giardino-venezia">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/giardino-venezia/1.jpg">
     <p class="sub">Giardino di Palazzo del Principe di Piombino</p><p class="quote">2018</p>
   </a></section>
 <!--#22-->
   <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/parco-della-pace/1.jpg">
     <p class="sub">Parco Della Pace</p><p class="quote">2017</p>
   </a></section>
 <!--#1-->
   <section class="thumbnail news-section section2"><a class="thumb" href="alessandria">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/alessandria/1.jpg">
     <p class="sub">Parco Marengo e del Platano di Napoleone</p><p class="quote">2017</p>
   </a></section>
 <!--#19-->
   <section class="thumbnail news-section section4"><a class="thumb" href="milano-serravalle">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/milano-serravalle/1.jpg">
     <p class="sub">Mitigazione della SP46 Rho-Monza a Paderno Dugnano</p><p class="quote">2016</p>
   </a></section>
 <!--#17-->
   <section class="thumbnail news-section section1"><a class="thumb" href="jinshan-marina">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/jinshan-marina/1.jpg">
     <p class="sub">Masterplan di Jinshan Marina</p><p class="quote">2015</p>
   </a></section>
 <!--#12-->
   <section class="thumbnail news-section section4"><a class="thumb" href="depuratore-trento">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/depuratore-trento/1.jpg">
     <p class="sub">Depuratore Trento Sud</p><p class="quote">2013</p>
   </a></section>
 <!--#14-->
   <section class="thumbnail news-section section1"><a class="thumb" href="expo-piastra">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/expo-piastra/1.jpg">
     <p class="sub">Opere paesaggistiche del sito espositivo Expo 2015 (Piastra)</p><p class="quote">2011</p>
   </a></section>
 <!--#13-->
   <section class="thumbnail news-section section4"><a class="thumb" href="expo-anello">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/expo-anello/1.jpg">
     <p class="sub">Anello verde (Green belt) Expo 2015</p><p class="quote">2011</p>
   </a></section>
 <!--#26-->
   <section class="thumbnail news-section section4"><a class="thumb" href="saronno-seregno">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/saronno-seregno/1.jpg">
     <p class="sub">Corridoi faunistici ed ecodotti al Parco delle Groane</p><p class="quote">2005</p>
   </a></section>
 <!--#5-->
   <section class="thumbnail news-section section4"><a class="thumb" href="castagno-turbigo">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/castagno-turbigo/1.jpg">
     <p class="sub">Inserimento paesaggistico tratto ferroviaro Saronno-Vanzaghello</p><p class="quote">2005</p>
   </a></section>
 <!--#20-->
   <section class="thumbnail news-section section2"><a class="thumb" href="museo-della-lontra">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/museo-della-lontra/1.jpg">
     <p class="sub">Museo sull'ecosistema Alpino</p><p class="quote">2007</p>
   </a></section>
 <!--#7-->
   <section class="thumbnail news-section section1"><a class="thumb" href="verde-precotto">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/verde-precotto/1.jpg">
     <p class="sub">Opere a verde e di arredo urbano, quartiere Precotto</p><p class="quote">2002</p>
   </a></section>
 <!--#21-->
   <section class="thumbnail news-section section2"><a class="thumb" href="museo-grande-guerra">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/museo-grande-guerra/1.jpg">
     <p class="sub">Parco Museo diffuso della Grande Guerra</p><p class="quote">1998</p>
   </a></section>
 <!--#6-->
   <section class="thumbnail news-section section3"><a class="thumb" href="discarica-ecosesto">
     <p class="cache">+</p>
-    <img src="../../library/progetti/">
+    <img src="../../library/progetti/discarica-ecosesto/1.jpg">
     <p class="sub">Recupero ambientale della discarica a Cologno Monzese</p><p class="quote">1998</p>
   </a></section>
 </div>
